compute feature grid based on volmesh points

--- a/density_grid.ipynb
+++ b/density_grid.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "1225eadd",
+   "execution_count": 1,
+   "id": "72edbc08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "801f0a37",
+   "id": "32fa713e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,18 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c216040b",
+   "execution_count": 3,
+   "id": "c21f33d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pc = pv.read(metadata_dir / \"all_points_no_outliers_interfaces_2M.vtk\")"
+    "pc = pv.read(metadata_dir / \"train_volmesh_points_density.vtk\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "a32fda7e",
+   "execution_count": 4,
+   "id": "83739730",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,8 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "099c7efb",
+   "execution_count": 17,
+   "id": "a2420082",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,6 +57,8 @@
     "dims = bbox[:,1] - bbox[:,0]\n",
     "coeff = (n_cells / np.prod(dims)) ** (1/3)\n",
     "bins = (dims * coeff).astype(np.int32)\n",
+    "if bins[1] % 2 == 0:\n",
+    "    bins[1] += 1\n",
     "H, edges = np.histogramdd(pc.points, bins=bins)\n",
     "centers = [(e[1:] + e[:-1]) / 2 for e in edges]\n",
     "x, y, z = np.meshgrid(centers[0], centers[1], centers[2], indexing=\"ij\")\n",
@@ -65,8 +67,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "da0f60c1",
+   "execution_count": 18,
+   "id": "2c38e6f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 8, 13,  4], dtype=int32)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "67f13d1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,8 +98,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "89e375da",
+   "execution_count": 20,
+   "id": "c8b5f86a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,8 +116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "30a07bf9",
+   "execution_count": 21,
+   "id": "d2e0cb4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,43 +126,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "a01cc143",
+   "execution_count": 22,
+   "id": "6a18c2e3",
    "metadata": {},
    "outputs": [],
    "source": [
     "nonzero_num_points = num_points[num_points > 0]\n",
-    "grid_interfaces = grid.threshold(np.quantile(nonzero_num_points, 0.9), invert=False)\n",
-    "grid_rare = grid.threshold(np.quantile(nonzero_num_points, 0.1), invert=True)\n",
+    "q = 0.7\n",
+    "grid_interfaces = grid.threshold(np.quantile(nonzero_num_points, q), invert=False)\n",
+    "grid_rare = grid.threshold(np.quantile(nonzero_num_points, q), invert=True).threshold(1e-5, invert=False)\n",
     "grid_interfaces.save(metadata_dir / \"grid_interfaces.vtk\")\n",
     "grid_rare.save(metadata_dir / \"grid_rare.vtk\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "fe267e86",
+   "execution_count": 23,
+   "id": "14b03a69",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(384, 122, 30)"
+       "(416, 199, 86)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "grid.n_cells, grid_rare.n_cells, grid_interfaces.n_cells"
+    "grid.n_cells, grid_rare.n_cells, grid_interfaces.n_cells,"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44ee8542",
+   "id": "55254494",
    "metadata": {},
    "outputs": [],
    "source": []
