--- a/volmesh_pointcloud_density.ipynb
+++ b/volmesh_pointcloud_density.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f5208e47",
+   "id": "dd060be2",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "45bad243",
+   "id": "97b4e7b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8f350fa2",
+   "id": "bb72e6b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0eeec854",
+   "id": "82af1a41",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f29778f9",
+   "id": "210757b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "033b67a5",
+   "id": "c1b9a1bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,19 +307,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "131e8f75",
+   "execution_count": 22,
+   "id": "68f2e0be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train.to_csv(metadata_dir / \"train_bracket_metadata.csv\")\n",
-    "df_test.to_csv(metadata_dir / \"test_bracket_metadata.csv\")"
+    "df_train.to_csv(metadata_dir / \"train_bracket_metadata.csv\", index=False)\n",
+    "df_test.to_csv(metadata_dir / \"test_bracket_metadata.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9200bfdb",
+   "id": "11126722",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4b0544af",
+   "id": "7e9edda0",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "43ae9ddc",
+   "id": "79806eaa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9f589b49",
+   "id": "f555d8eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5918288c",
+   "id": "1af7cf7a",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "94824f08",
+   "id": "8add97aa",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "1507bd71",
+   "id": "c26c8fc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8ca59fe5",
+   "id": "a4ed0084",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "68c98679",
+   "id": "4437106d",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "e9d821e2",
+   "id": "49b46365",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "efb0ee06",
+   "id": "d7cd98b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2bdb54a",
+   "id": "6751fb3a",
    "metadata": {},
    "outputs": [],
    "source": []
