--- a/create_classification_features.ipynb
+++ b/create_classification_features.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "id": "dcd45967",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -93,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "c296766d",
    "metadata": {},
    "outputs": [],
@@ -103,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "bd7c0847",
    "metadata": {},
    "outputs": [
@@ -309,7 +300,7 @@
        "[5 rows x 202 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "id": "421f6f73",
    "metadata": {},
    "outputs": [],
@@ -332,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "id": "dfc80341",
    "metadata": {},
    "outputs": [
@@ -342,7 +333,7 @@
        "(247,)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +344,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
+   "id": "95cda96f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(np.unique(y_train))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9906e901",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[autoreload of numpy.lib.ufunclike failed: Traceback (most recent call last):\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/IPython/extensions/autoreload.py\", line 257, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/IPython/extensions/autoreload.py\", line 480, in superreload\n",
+      "    update_generic(old_obj, new_obj)\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/IPython/extensions/autoreload.py\", line 377, in update_generic\n",
+      "    update(a, b)\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/IPython/extensions/autoreload.py\", line 289, in update_function\n",
+      "    setattr(old, name, getattr(new, name))\n",
+      "ValueError: _dispatcher() requires a code object with 0 free vars, not 1\n",
+      "]\n",
+      "[autoreload of numpy.matrixlib failed: Traceback (most recent call last):\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/IPython/extensions/autoreload.py\", line 257, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/IPython/extensions/autoreload.py\", line 455, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/importlib/__init__.py\", line 169, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 619, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 883, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap>\", line 241, in _call_with_frames_removed\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/numpy/matrixlib/__init__.py\", line 6, in <module>\n",
+      "    __all__ = defmatrix.__all__\n",
+      "NameError: name 'defmatrix' is not defined\n",
+      "]\n",
+      "[autoreload of numpy.lib failed: Traceback (most recent call last):\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/IPython/extensions/autoreload.py\", line 257, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/IPython/extensions/autoreload.py\", line 455, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/importlib/__init__.py\", line 169, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 619, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 883, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap>\", line 241, in _call_with_frames_removed\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/numpy/lib/__init__.py\", line 44, in <module>\n",
+      "    __all__ += type_check.__all__\n",
+      "NameError: name 'type_check' is not defined\n",
+      "]\n",
+      "[autoreload of numpy.ma.core failed: Traceback (most recent call last):\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/IPython/extensions/autoreload.py\", line 257, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/IPython/extensions/autoreload.py\", line 480, in superreload\n",
+      "    update_generic(old_obj, new_obj)\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/IPython/extensions/autoreload.py\", line 377, in update_generic\n",
+      "    update(a, b)\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/IPython/extensions/autoreload.py\", line 329, in update_class\n",
+      "    if update_generic(old_obj, new_obj):\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/IPython/extensions/autoreload.py\", line 377, in update_generic\n",
+      "    update(a, b)\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/IPython/extensions/autoreload.py\", line 289, in update_function\n",
+      "    setattr(old, name, getattr(new, name))\n",
+      "ValueError: __setitem__() requires a code object with 2 free vars, not 0\n",
+      "]\n",
+      "[autoreload of numpy failed: Traceback (most recent call last):\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/IPython/extensions/autoreload.py\", line 257, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/IPython/extensions/autoreload.py\", line 455, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/importlib/__init__.py\", line 169, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 619, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 883, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap>\", line 241, in _call_with_frames_removed\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/numpy/__init__.py\", line 191, in <module>\n",
+      "    core.numerictypes.typeDict,\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/numpy/core/__init__.py\", line 161, in __getattr__\n",
+      "    raise AttributeError(f\"Module {__name__!r} has no attribute {name!r}\")\n",
+      "AttributeError: Module 'numpy.core' has no attribute 'numerictypes'\n",
+      "]\n",
+      "[autoreload of numpy.testing._private.utils failed: Traceback (most recent call last):\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/IPython/extensions/autoreload.py\", line 257, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/IPython/extensions/autoreload.py\", line 455, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/importlib/__init__.py\", line 169, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 619, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 883, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap>\", line 241, in _call_with_frames_removed\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/numpy/testing/_private/utils.py\", line 53, in <module>\n",
+      "    HAS_LAPACK64 = numpy.linalg.lapack_lite._ilp64\n",
+      "AttributeError: module 'numpy.linalg' has no attribute 'lapack_lite'\n",
+      "]\n",
+      "[autoreload of numpy.testing failed: Traceback (most recent call last):\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/IPython/extensions/autoreload.py\", line 257, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/IPython/extensions/autoreload.py\", line 455, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/importlib/__init__.py\", line 169, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 619, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 883, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap>\", line 241, in _call_with_frames_removed\n",
+      "  File \"/home/max/miniconda3/envs/dev/lib/python3.10/site-packages/numpy/testing/__init__.py\", line 17, in <module>\n",
+      "    __all__ = _private.utils.__all__ + ['TestCase', 'run_module_suite']\n",
+      "NameError: name '_private' is not defined\n",
+      "]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([4, 2, 2, 4, 3, 4, 2, 0, 1, 2, 1, 1, 4, 4, 0, 4, 2, 1, 4, 1, 4, 1,\n",
+       "       2, 3, 4, 3, 2, 2, 4, 3, 0, 0, 1, 4, 4, 1, 2, 3, 2, 2, 2, 1, 4, 4,\n",
+       "       4, 4, 4, 4, 1, 4, 4, 2, 2, 4, 0, 4, 4, 4, 2, 2, 1, 0, 0, 4, 2, 2,\n",
+       "       4, 4, 3, 4, 2, 0, 2, 4, 4, 4, 1, 3, 0, 0, 3, 2, 4, 3, 2, 2, 1, 2,\n",
+       "       2, 5, 0, 4, 3, 5, 4, 4, 4, 0, 5, 0, 4, 2, 4, 4, 3, 4, 2, 0, 4, 4,\n",
+       "       2, 2, 4, 4, 1, 1, 4, 0, 0, 1, 2, 2, 2, 4, 1, 4, 2, 1, 3, 0, 3, 2,\n",
+       "       2, 3, 4, 2, 2, 2, 4, 1, 4, 4, 0, 2, 4, 4, 2, 2, 0, 0, 4, 2, 2, 2,\n",
+       "       4, 4, 2, 4, 2, 2, 4, 2, 2, 3, 3, 2, 3, 1, 1, 4, 5, 4, 0, 2, 2, 0,\n",
+       "       4, 2, 2, 2, 4, 2, 4, 1, 4, 2, 2, 1, 4, 3, 4, 4, 2, 2, 3, 4, 1, 4,\n",
+       "       3, 2, 0, 3, 4, 1, 3, 4, 0, 1, 2, 4, 4, 1, 2, 4, 4, 2, 4, 3, 0, 4,\n",
+       "       4, 1, 4, 2, 2, 1, 4, 2, 3, 3, 2, 4, 3, 4, 4, 4, 2, 4, 1, 3, 4, 3,\n",
+       "       4, 2, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "8cca88f9",
    "metadata": {},
    "outputs": [],
@@ -363,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "id": "dd98517c",
    "metadata": {},
    "outputs": [
@@ -373,7 +521,7 @@
        "(247, 199)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "id": "2efd0b56",
    "metadata": {},
    "outputs": [],
@@ -395,17 +543,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "id": "6849be95",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df = pd.read_csv(metadata_dir / \"train_bracket_category.csv\")"
+    "test_df = pd.read_csv(metadata_dir / \"test_bracket_category.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "id": "01791109",
    "metadata": {},
    "outputs": [],
@@ -416,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "id": "80e467d8",
    "metadata": {},
    "outputs": [],
@@ -426,17 +574,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "id": "bab5e3e5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9959514170040485"
+       "0.7349397590361446"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
